issue#216:fix queueType when notify by email

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <powermock.version>2.0.9</powermock.version>
     </properties>
 
     <dependencies>
@@ -81,9 +82,24 @@
             <artifactId>jmh-core</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
