--- a/starter/starter-adapter/starter-adapter-common/pom.xml
+++ b/starter/starter-adapter/starter-adapter-common/pom.xml
@@ -15,5 +15,20 @@
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-adapter-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 </project>
