--- a/starter/starter-configcenter/starter-etcd/pom.xml
+++ b/starter/starter-configcenter/starter-etcd/pom.xml
@@ -24,5 +24,10 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
