--- a/starter/starter-configcenter/starter-zookeeper/pom.xml
+++ b/starter/starter-configcenter/starter-zookeeper/pom.xml
@@ -27,5 +27,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
