RocketMQ阿里云商业版支持

--- a/starter/starter-adapter/starter-adapter-rocketmq/pom.xml
+++ b/starter/starter-adapter/starter-adapter-rocketmq/pom.xml
@@ -20,5 +20,13 @@
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-adapter-rocketmq</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>ons-client</artifactId>
+            <version>${aliyun-rocketmq.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
