--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <motan.version>1.2.0</motan.version>
         <okhttp.version>3.14.9</okhttp.version>
         <rocketmq.version>2.2.2</rocketmq.version>
+        <!--until 2023-04-06 latest state version-->
+        <aliyun-rocketmq.version>1.8.8.8.Final</aliyun-rocketmq.version>
         <tars.version>1.7.2</tars.version>
         <skywalking.version>8.11.0</skywalking.version>
         <nacos.version>2.0.4</nacos.version>
