feat(添加JsonUtil代替额外引入包的JsonUtils方法 #223): 新增JsonParser接口，使用Jackson/Gson/Fastjson实现，引入包设置为optional=true，根据引入dynamic-tp的项目自带序列化jar包自动选择哪一种实现，并且减少第三方包依赖

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,5 +20,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 </project>
