--- a/starter/starter-configcenter/starter-apollo/pom.xml
+++ b/starter/starter-configcenter/starter-apollo/pom.xml
@@ -17,5 +17,10 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
