--- a/starter/starter-configcenter/starter-nacos/pom.xml
+++ b/starter/starter-configcenter/starter-nacos/pom.xml
@@ -25,6 +25,11 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
