--- a/example/example-etcd/pom.xml
+++ b/example/example-etcd/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.0.5</version>
+            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.dynamictp</groupId>
