--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -14,6 +14,7 @@
         <module>starter-configcenter</module>
         <module>starter-adapter</module>
         <module>starter-extension</module>
+        <module>starter-spring-boot-adapter-3.x</module>
     </modules>
 
     <dependencies>
