--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <jmh.version>1.35</jmh.version>
         <gson.version>2.8.9</gson.version>
         <fastjson.version>1.2.83</fastjson.version>
+        <opentelemetry.version>1.25.0</opentelemetry.version>
     </properties>
 
     <modules>
